--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#ffffff</color>
 
     <color name="colorFab">#00c1b8</color>
-    <color name="primary">#2196F3</color>
+    <color name="primary">#2196f3</color>
 
     <color name="detail_background">#EEEEEE</color>
     <color name="dark">#1976d2</color>
